# PiscinePython

Python-0/ex00/: Hello.py
Python-0/ex01/: .format_ft_time.py.swp  format_ft_time.py
Python-0/ex02/: find_ft_type.py  tester.py
Python-0/ex03/: NULL_not_found.py
Python-0/ex04/: whatis.py
Python-0/ex05/: building.py
Python-0/ex06/: filterstring.py  ft_filter.py
Python-0/ex07/: sos.py
Python-0/ex08/: Loading.py  test.py
Python-0/ex09/: LICENSE  README.md  pyproject.toml
Python-0/ex09/ft_package/: __init__.py  useless.py
Python-1/ex00/: give_bmi.py  tester.py
Python-1/ex01/: array2D.py
Python-1/ex02/: load_image.py
Python-1/ex03/: load_image.py  zoom.py
Python-1/ex04/: load_image.py  rotate.py
Python-1/ex05/: load_image.py  pimp_image.py
Python-2/ex01/: aff_life.py  load_csv.py
Python-2/ex02/: aff_pop.py
Python-2/ex03/: projection_life.py
Python-3/ex00/: tester.py
Python-3/ex01/: S1E7.py  tester.py
Python-3/ex02/: DiamondTrap.py  S1E9.py  tester.py
Python-3/ex03/: ft_calculator.py  tester.py
Python-3/ex04/: ft_calculator.py  tester.py
Python-4/ex00/: statistics.py  tester.py
Python-4/ex01/: in_out.py  tester.py
Python-4/ex02/: callLimit.py  tester.py
Python-4/ex03/: new_student.py  tester.py
